--- a/contact.css
+++ b/contact.css
@@ -1,80 +1,79 @@
-* {
-	margin: 0;
-	padding: 0;
+body {
+    background: url(contact.jpg) no-repeat;
 }
 
-header {
-	background-image: url(home.jpeg);
-	height: 100vh;
-	background-size: cover;
-	background-position: center;
+h1 {
+    color: white;
+    text-align: center;
 }
 
-.nav-bar {
-	background: rgb(0, 0, 0, 0.5);
-	height: 80px;
-}
-
-.logo {
-	margin: 10px 50px;
-	height: 60px;
-}
-
-.menu {
-	float: right;
-	list-style: none;
-	margin: 20px;
-}
-
-.menu li {
-	display: inline-block;
-	margin: 10px 5px;
-}
-
-.menu li a {
-	text-decoration: none;
-	color: #fff;
-	padding: 5px 10px;
-	font-family: sans-serif;
-	letter-spacing: 2px;
-	border: 1px solid #fff;
-}
-
-.menu li a:hover {
-	background: #fff;
-	transition: .4s;
-	color: #000;
-}
-
-input[type=text], select, textarea {
+ul {
     width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-top: 6px;
-    margin-bottom: 16px;
-    resize: vertical;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: black;
 }
 
-input[type=submit] {
-    background-color: #4CAF50;
+li {
+    float: left;
+}
+
+li a {
+    display: block;
     color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
 }
 
-input[type=submit]:hover {
-    background-color: #45a049;
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+    background-color: #111;
 }
 
-.container {
-    background: rgba(0, 0, 0, 0.4);
-    padding: 20px;
+.active {
+    background-color: #B22222;
+}
+
+li a:hover, .dropdown:hover .dropbtn {
+    background-color: green;
+}
+
+li.dropdown {
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+iframe{
+    height: 50%;
     width: 50%;
-    color: white;
-    margin: auto;
-    margin-top: 20px;
+    padding-top: 50px;
+    position: absolute;
+    left: 25%;
 }
+
+
