--- a/home.css
+++ b/home.css
@@ -3,86 +3,37 @@
 	padding: 0;
 }
 
-header {
-	background-image: url(home.jpeg);
-	height: 100vh;
+html, body {
+	background: url(home.jpg);
 	background-size: cover;
-	background-position: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	background-repeat: no-repeat;
 }
 
-.nav-bar {
-	background: rgb(0, 0, 0, 0.5);
-	height: 80px;
-}
-
-.logo {
-	margin: 10px 50px;
-	height: 60px;
-}
-
-.menu {
-	float: right;
-	list-style: none;
-	margin: 20px;
-}
-
-.menu li {
-	display: inline-block;
-	margin: 10px 5px;
-}
-
-.menu li a {
-	text-decoration: none;
-	color: #fff;
-	padding: 5px 10px;
-	font-family: sans-serif;
-	letter-spacing: 2px;
-	border: 1px solid #fff;
-}
-
-.menu li a:hover {
-	background: #fff;
-	transition: .4s;
-	color: #000;
-}
-
-.welcome {
-	position: relative;
+.container {
+	width: 600px;
+	margin: auto;
+	margin-top: 240px;
 	text-align: center;
-	font-family: sans-serif;
-	color: #fff;
-	top: 160px;
 }
 
-.welcome h1{
-	font-size: 42px;
-	margin: 25px;
+h1 {
+	color: #ffffff;
+	font: 900 96px 'Mr De Haviland', cursive;
+	text-shadow: 0px 2px 4px rgb(0, 0, 0, 0.6);
+	margin-bottom: 24px;
 }
 
 .btn {
-	font-size: 18px;
-	letter-spacing: 2px;
-	margin: 5px;
-	padding: 7px 10px;
+	background-color: #B22222;
+	border-radius: 4px;
+	padding: 20px 48px;
+	color: #ffffff;
+	font: 20px 'Neuton', serif;
 	text-decoration: none;
-	border: 1px solid #fff;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
 }
-
-.btn1 {
-	background: #fff;
-	color: #000;
-}
-
-.ml15 {
-  font-weight: 800;
-  font-size: 3.8em;
-  text-transform: uppercase;
-  text-align: center;
-  color: white;
-}
-
-.ml15 .word {
-  display: inline-block;
-  line-height: 1em;
-}
-
